--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,17 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat">
+    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+
+    </style>
+    <style name="LoginActivity" parent="AppTheme">
+        <item name="colorPrimaryDark">#35439B</item>
+        <item name="colorAccent">#ffffff</item>
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:background">#4592CF</item>
+        <item name="android:colorButtonNormal">#35439B</item>
     </style>
 
 </resources>
